--- a/public/index.html
+++ b/public/index.html
@@ -44,21 +44,30 @@
             <div class="mb-6">
                 <h2 class="text-xl font-semibold mb-4">Stream Configuration</h2>
                 <div class="space-y-4">
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">RTMP URL</label>
-                        <input type="text" id="rtmpUrl" class="w-full px-3 py-2 border border-gray-300 rounded-md" 
-                               placeholder="rtmp://a.rtmp.youtube.com/live2">
+                    <div class="hidden">
+                        <input type="hidden" id="rtmpUrl" value="rtmp://a.rtmp.youtube.com/live2">
                     </div>
                     <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Stream Key</label>
-                        <input type="password" id="streamKey" class="w-full px-3 py-2 border border-gray-300 rounded-md" 
-                               placeholder="Enter your stream key">
+                        <label class="block text-sm font-medium text-gray-700 mb-1">YouTube Stream Key</label>
+                        <div class="flex rounded-md shadow-sm">
+                            <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 text-sm">
+                                rtmp://a.rtmp.youtube.com/live2/
+                            </span>
+                            <input type="password" id="streamKey" class="flex-1 min-w-0 block w-full px-3 py-2 rounded-none rounded-r-md border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500" 
+                                   placeholder="Paste your stream key here" required>
+                        </div>
+                        <p class="mt-1 text-xs text-gray-500">Dapatkan Stream Key dari YouTube Studio > Live Streaming</p>
                     </div>
                     <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Google Drive Video URL</label>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">Video URL</label>
                         <input type="text" id="videoUrl" class="w-full px-3 py-2 border border-gray-300 rounded-md" 
-                               placeholder="https://drive.google.com/...">
-                        <p class="text-xs text-gray-500 mt-1">Paste the shareable link of your video from Google Drive</p>
+                               placeholder="https://...">
+                        <p class="text-xs text-gray-500 mt-1">
+                            Dukungan format:<br>
+                            - Google Drive: Paste URL shareable<br>
+                            - File MP4 langsung: http://example.com/video.mp4<br>
+                            Format video yang direkomendasikan: H.264, AAC audio, 1920x1080 (1080p)
+                        </p>
                     </div>
                 </div>
             </div>
@@ -129,12 +138,11 @@
 
         // Start stream
         startBtn.addEventListener('click', async () => {
-            const rtmpUrl = document.getElementById('rtmpUrl').value.trim();
             const streamKey = document.getElementById('streamKey').value.trim();
             const videoUrl = document.getElementById('videoUrl').value.trim();
 
-            if (!rtmpUrl || !streamKey || !videoUrl) {
-                alert('Please fill in all fields');
+            if (!streamKey || !videoUrl) {
+                alert('Harap isi Stream Key dan URL video');
                 return;
             }
 
@@ -145,7 +153,6 @@
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify({
-                        streamUrl: rtmpUrl,
                         streamKey: streamKey,
                         videoUrl: videoUrl
                     })
